homepage navbar, sidebar and main content layout

--- a/index.html
+++ b/index.html
@@ -4,17 +4,122 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="assets/css/all.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    
+    <!-- Header Section -->
+    <header>
+        <div class="container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item home-header-carousel active">
+                    <img src="assets/img/header_slider1.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h1>
+                          <span class="bg-warning">
+                            Livelihood Development for Tribal
+                          </span>
+                        </h1>
+                    </div>
+                  </div>
+                  <div class="carousel-item home-header-carousel">
+                    <img src="assets/img/home_slider2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>
+                            <span class="bg-warning">
+                                Employment and Income Generating Program(EIGP)
+                            </span>
+                          </h1>
+                    </div>
+                  </div>
+                  <div class="carousel-item home-header-carousel">
+                    <img src="assets/img/header_slider1.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>
+                            <span class="bg-warning">
+                                Gramaus Model Academy
+                            </span>
+                          </h1>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse home-nav-list" id="navbarSupportedContent">
+                    <ul class="navbar-nav text-uppercase mx-auto mb-2 mb-lg-0 d-flex">
+                      <li class="nav-item bg-danger me-1 px-3">
+                        <a class="nav-link text-light active" aria-current="page" href="#"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
+                      </li>
+                      <li class="nav-item bg-danger me-1 px-3">
+                        <a class="nav-link text-light" href="#"><i class="fa fa-briefcase" aria-hidden="true"></i> career</a>
+                      </li>
+                      <li class="nav-item bg-danger me-1 px-3">
+                        <a class="nav-link text-light" href="#"><i class="fa fa-thumbtack" aria-hidden="true"></i> branches</a>
+                      </li>
+                      <li class="nav-item bg-danger me-1 px-3">
+                        <a class="nav-link text-light" href="#"><i class="fa fa-assistive-listening-systems" aria-hidden="true"></i> donor</a>
+                      </li>
+                      <li class="nav-item bg-danger me-1 px-3">
+                        <a class="nav-link text-light" href="#"><i class="fa fa-address-book" aria-hidden="true"></i> gallery</a>
+                      </li>
+                      <li class="nav-item bg-danger me-1 px-3">
+                        <a class="nav-link text-light" href="#"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> contact us</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+        </div>
+    </header>
+    <!-- End Header Section -->
+
+    <!-- Start Main Area Section -->
+    <section class="container">
+        <div class="row">
+            <!-- Main section left side bar -->
+            <div class="col-md-3 col-12 home-main-leftbar">
+                <div class="mb-4">
+                    <ul>
+                        <li class="ps-1 py-1">Gramaus at a Glance</li>
+                        <li class="py-1"><a href="">Gramaus at a Glance</a></li>
+                        <li class="py-1"><a href="">Gramaus at a Glance</a></li>
+                    </ul>
+                </div>
+
+                <div class="mb-4">
+                    <ul>
+                        <li class="ps-1 py-1">Gramaus at a Glance</li>
+                        <li class="py-1"><a href="">Gramaus at a Glance</a></li>
+                        <li class="py-1"><a href="">Gramaus at a Glance</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Main section content bar -->
+            <div class="col-md-6 col-12">
+                <div style="background-color: red; height: 50px; width: 100%;"></div>
+            </div>
+
+            <!-- Main section right bar -->
+            <div class="col-md-3 col-12">
+                <div style="background-color: green; height: 50px; width: 100%;"></div>
+            </div>
+        </div>
+    </section>
 
     <!-- Bootstrap Bundle JS -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
