--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <!-- Header Section -->
+    <!-- Header Section Start -->
     <header>
         <div class="container">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -90,7 +90,7 @@
     <!-- Start Main Area Section -->
     <section class="container">
         <div class="row">
-            <!-- Main section left side bar -->
+            <!-- Main Section Left Sidebar -->
             <div class="col-md-3 col-12 home-main-leftbar">
                 <div class="mb-4">
                     <ul>
@@ -109,17 +109,18 @@
                 </div>
             </div>
 
-            <!-- Main section content bar -->
+            <!-- Main Section Content -->
             <div class="col-md-6 col-12">
                 <div style="background-color: red; height: 50px; width: 100%;"></div>
             </div>
 
-            <!-- Main section right bar -->
+            <!-- Main Section Rightbar -->
             <div class="col-md-3 col-12">
                 <div style="background-color: green; height: 50px; width: 100%;"></div>
             </div>
         </div>
     </section>
+    <!-- End Main Area Section -->
 
     <!-- Bootstrap Bundle JS -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
