home page main section design

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section class="container">
         <div class="row">
             <!-- Main Section Left Sidebar -->
-            <div class="col-md-3 col-12 home-main-leftbar">
+            <div class="col-md-2 col-12 home-main-leftbar">
                 <div class="mb-4">
                     <ul>
                         <li class="ps-1 py-1">Gramaus at a Glance</li>
@@ -110,17 +110,201 @@
             </div>
 
             <!-- Main Section Content -->
-            <div class="col-md-6 col-12">
-                <div style="background-color: red; height: 50px; width: 100%;"></div>
+            <div class="col-md-8 col-12">
+
+                <!-- Main Content Part One -->
+                <div id="carouselExampleIndicators" class="home-main-carousel-one carousel slide text-light px-3 py-4 mb-3" data-bs-ride="carousel">
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  </div>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <p>One Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi eos veritatis deserunt vel magni veniam a sapiente ipsam, pariatur doloremque illo atque inventore iure ducimus dolor voluptatum saepe et corporis.</p>
+                      <p>One Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi eos veritatis deserunt vel magni veniam a sapiente ipsam, pariatur doloremque illo atque inventore iure ducimus dolor voluptatum saepe et corporis.</p>
+                      <p>One Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi eos veritatis deserunt vel magni veniam a sapiente ipsam, pariatur doloremque illo atque inventore iure ducimus dolor voluptatum saepe et corporis.</p>
+                    </div>
+                    <div class="carousel-item">
+                      <p>Two Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi eos veritatis deserunt vel magni veniam a sapiente ipsam, pariatur doloremque illo atque inventore iure ducimus dolor voluptatum saepe et corporis.</p>
+                    </div>
+                    <div class="carousel-item">
+                      <p>Three Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi eos veritatis deserunt vel magni veniam a sapiente ipsam, pariatur doloremque illo atque inventore iure ducimus dolor voluptatum saepe et corporis.</p>
+                    </div>
+                  </div>
+                </div>
+
+
+                <!-- Main Content Part Two -->
+                <div id="carouselExampleIndicatorsTwo" class="home-main-carousel-two carousel slide text-light py-2 mb-3" data-bs-ride="carousel">
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  </div>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="item-header">
+                          <h4 class="text-center py-2">Success Story Of Someone</h4>
+                        </div>
+  
+                        <div class="item-content p-2">
+                          <div class="row">
+                            <div class="col-5">
+                              <img src="assets/img/home_slider2.jpg" class="img-fluid" alt="">
+                            </div>
+                            <div class="col-md-7">
+                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum tenetur molestiae deleniti? Exercitationem sunt, distinctio possimus sequi veritatis suscipit. Cumque, animi! Modi fugit hic voluptatibus cumque dolorum magnam fugiat at.</p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="item-header">
+                        <h4 class="text-center py-2">Success Story Of Someone</h4>
+                      </div>
+
+                      <div class="item-content p-2">
+                        <div class="row">
+                          <div class="col-5">
+                            <img src="assets/img/home_slider2.jpg" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-7">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum tenetur molestiae deleniti? Exercitationem sunt, distinctio possimus sequi veritatis suscipit. Cumque, animi! Modi fugit hic voluptatibus cumque dolorum magnam fugiat at.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="item-header">
+                        <h4 class="text-center py-2">Success Story Of Someone</h4>
+                      </div>
+
+                      <div class="item-content p-2">
+                        <div class="row">
+                          <div class="col-5">
+                            <img src="assets/img/home_slider2.jpg" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-7">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum tenetur molestiae deleniti? Exercitationem sunt, distinctio possimus sequi veritatis suscipit. Cumque, animi! Modi fugit hic voluptatibus cumque dolorum magnam fugiat at.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+
+
+                <!-- Main Content Part Three -->
+                <div class="home-blog-section mb-3">
+                  <div class="row">
+                    <div class="col-md-6 col-12">
+                      <div class="content-box p-2">
+                        <div class="row">
+                          <div class="col-6">
+                            <h6 class="text-center text-capitalize">Working Area</h6>
+                            <img src="assets/img/details1.png" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-6">
+                            <p class="mt-7">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
+                            <a href="" class="btn btn-rounded btn-primary">Read More</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-12">
+                      <div class="content-box p-2">
+                        <div class="row">
+                          <div class="col-6">
+                            <h6 class="text-center text-capitalize">Working Area</h6>
+                            <img src="assets/img/details1.png" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-6">
+                            <p class="mt-4">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
+                            <a href="" class="btn btn-rounded btn-primary">Read More</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    
+                  </div>
+                </div>
+
+                <!-- Main Content Part Four -->
+                <div class="home-video-section p-3 mb-3">
+                    <div class="video-box mb-4">
+                      <h5 class="py-2 text-center text-capitalize border text-light">Documentry</h5>
+                      <iframe width="100%" height="320" src="https://www.youtube.com/embed/xfwfMlfQE-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </div>
+
+                  <div class="video-box mb-4">
+                    <h5 class="py-2 text-center text-capitalize border text-light">Documentry</h5>
+                    <iframe width="100%" height="320" src="https://www.youtube.com/embed/xfwfMlfQE-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                </div>
             </div>
 
             <!-- Main Section Rightbar -->
-            <div class="col-md-3 col-12">
+            <div class="col-md-2 col-12">
                 <div style="background-color: green; height: 50px; width: 100%;"></div>
             </div>
         </div>
     </section>
     <!-- End Main Area Section -->
+
+
+    <!-- Start Footer Section -->
+    <footer class="mt-5">
+        <div class="container pt-4 pb-2">
+          <div class="row">
+            <div class="col-md-5 col-6">
+                <h5 class="mb-4 text-decoration-underline">Contact Information</h5>
+
+                <p>Padakhep Manabik Unnayan Kendra<br>Head Office</p>
+
+                <p>
+                  House# 548, Road# 10, Baitul Aman Housing Society, Adabar, Mohammadpur, Dhaka-1207, Bangladesh.
+                  <br>
+                  Phone: PABX 880-2-58151126, 58156925, 55010405
+                  <br>
+                  Fax: 880-2-48119794
+                </p>
+                <p>
+                  E-mail: pmuk@padakhep.org, info@padakhep.org
+                </p>
+            </div>
+
+            <div class="col-md-3 col-6">
+              <h5 class="mb-4 text-decoration-underline">More Links</h5>
+              <ul>
+                <li><a href="">Organogram</a></li>
+                <li><a href="">Organogram</a></li>
+                <li><a href="">Organogram</a></li>
+                <li><a href="">Organogram</a></li>
+                <li><a href="">Organogram</a></li>
+                <li><a href="">Organogram</a></li>
+              </ul>
+          </div>
+
+          <div class="col-md-4 col-12">
+            <h5 class="mb-4 text-decoration-underline">Facebook Page</h5>
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FKrishokerHashii%2F&tabs=timeline&height=150&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="100%" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+          </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+          <div class="col-12 text-center">
+             <b>&copy; ABC. All Rights Reserved.</b>
+          </div>
+        </div>
+
+          </div>
+        </div>
+    </footer>
+    <!-- End Footer Section -->
 
     <!-- Bootstrap Bundle JS -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
