--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light main-manu">
                 <div class="container-fluid">
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -153,7 +153,7 @@
                             <div class="col-5">
                               <img src="assets/img/home_slider2.jpg" class="img-fluid" alt="">
                             </div>
-                            <div class="col-md-7">
+                            <div class="col-7">
                               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum tenetur molestiae deleniti? Exercitationem sunt, distinctio possimus sequi veritatis suscipit. Cumque, animi! Modi fugit hic voluptatibus cumque dolorum magnam fugiat at.</p>
                             </div>
                           </div>
@@ -169,7 +169,7 @@
                           <div class="col-5">
                             <img src="assets/img/home_slider2.jpg" class="img-fluid" alt="">
                           </div>
-                          <div class="col-md-7">
+                          <div class="col-7">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum tenetur molestiae deleniti? Exercitationem sunt, distinctio possimus sequi veritatis suscipit. Cumque, animi! Modi fugit hic voluptatibus cumque dolorum magnam fugiat at.</p>
                           </div>
                         </div>
@@ -185,7 +185,7 @@
                           <div class="col-5">
                             <img src="assets/img/home_slider2.jpg" class="img-fluid" alt="">
                           </div>
-                          <div class="col-md-7">
+                          <div class="col-7">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum tenetur molestiae deleniti? Exercitationem sunt, distinctio possimus sequi veritatis suscipit. Cumque, animi! Modi fugit hic voluptatibus cumque dolorum magnam fugiat at.</p>
                           </div>
                         </div>
@@ -198,17 +198,17 @@
 
                 <!-- Main Content Part Three -->
                 <div class="home-blog-section mb-3">
-                  <div class="row">
+                  <div class="row p-4">
                     <div class="col-md-6 col-12">
                       <div class="content-box p-2">
                         <div class="row">
-                          <div class="col-6">
+                          <div class="col-md-12 col-lg-7 col-7">
                             <h6 class="text-center text-capitalize">Working Area</h6>
-                            <img src="assets/img/details1.png" class="img-fluid" alt="">
+                            <img src="assets/img/details1.png" class="img-fluid w-100" alt="">
                           </div>
-                          <div class="col-6">
+                          <div class="col-md-12 col-lg-5 col-5">
                             <p class="mt-7">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
-                            <a href="" class="btn btn-rounded btn-primary">Read More</a>
+                            <a href="" class="btn btn-rounded btn-sm btn-primary">Read More</a>
                           </div>
                         </div>
                       </div>
@@ -216,13 +216,13 @@
                     <div class="col-md-6 col-12">
                       <div class="content-box p-2">
                         <div class="row">
-                          <div class="col-6">
+                          <div class="col-md-12 col-lg-7 col-7">
                             <h6 class="text-center text-capitalize">Working Area</h6>
-                            <img src="assets/img/details1.png" class="img-fluid" alt="">
+                            <img src="assets/img/details1.png" class="img-fluid w-100" alt="">
                           </div>
-                          <div class="col-6">
-                            <p class="mt-4">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
-                            <a href="" class="btn btn-rounded btn-primary">Read More</a>
+                          <div class="col-md-12 col-lg-5 col-5">
+                            <p class="mt-7">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
+                            <a href="" class="btn btn-rounded btn-sm btn-primary">Read More</a>
                           </div>
                         </div>
                       </div>
@@ -233,29 +233,50 @@
 
                 <!-- Main Content Part Four -->
                 <div class="home-video-section p-3 mb-3">
-                    <div class="video-box mb-4">
-                      <h5 class="py-2 text-center text-capitalize border text-light">Documentry</h5>
-                      <iframe width="100%" height="320" src="https://www.youtube.com/embed/xfwfMlfQE-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class="row">
+                    <div class="col-md-6 col-12">
+                      <div class="video-box mb-4">
+                        <h5 class="py-2 text-center text-capitalize border text-light">Documentary Film</h5>
+                        <iframe width="100%" height="200" src="https://www.youtube.com/embed/xfwfMlfQE-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-12">
+                      <div class="video-box mb-4">
+                        <h5 class="py-2 text-center text-capitalize border text-light">Documentary Film</h5>
+                        <iframe width="100%" height="200" src="https://www.youtube.com/embed/xfwfMlfQE-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      </div>
+                    </div>
                   </div>
+                    
 
-                  <div class="video-box mb-4">
-                    <h5 class="py-2 text-center text-capitalize border text-light">Documentry</h5>
-                    <iframe width="100%" height="320" src="https://www.youtube.com/embed/xfwfMlfQE-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
                 </div>
             </div>
 
             <!-- Main Section Rightbar -->
-            <div class="col-md-2 col-12">
-                <div style="background-color: green; height: 50px; width: 100%;"></div>
-            </div>
+            <div class="col-md-2 col-12 home-main-leftbar">
+              <div class="mb-4">
+                  <ul>
+                      <li class="ps-1 py-1">Gramaus at a Glance</li>
+                      <li class="py-1"><a href="">Gramaus at a Glance</a></li>
+                      <li class="py-1"><a href="">Gramaus at a Glance</a></li>
+                  </ul>
+              </div>
+
+              <div class="mb-4">
+                  <ul>
+                      <li class="ps-1 py-1">Gramaus at a Glance</li>
+                      <li class="py-1"><a href="">Gramaus at a Glance</a></li>
+                      <li class="py-1"><a href="">Gramaus at a Glance</a></li>
+                  </ul>
+              </div>
+          </div>
         </div>
     </section>
     <!-- End Main Area Section -->
 
 
     <!-- Start Footer Section -->
-    <footer class="mt-5">
+    <footer class="">
         <div class="container pt-4 pb-2">
           <div class="row">
             <div class="col-md-5 col-6">
