--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light main-manu">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light main-manu" id="navbar">
                 <div class="container-fluid">
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -88,7 +88,8 @@
     <!-- End Header Section -->
 
     <!-- Start Main Area Section -->
-    <section class="container">
+
+    <section class="container content">
         <div class="row">
             <!-- Main Section Left Sidebar -->
             <div class="col-md-2 col-12 home-main-leftbar">
@@ -199,30 +200,58 @@
                 <!-- Main Content Part Three -->
                 <div class="home-blog-section mb-3">
                   <div class="row p-4">
-                    <div class="col-md-6 col-12">
+                    <div class="col-md-6 col-12 mb-2">
                       <div class="content-box p-2">
                         <div class="row">
                           <div class="col-md-12 col-lg-7 col-7">
-                            <h6 class="text-center text-capitalize">Working Area</h6>
+                            <h6 class="text-center text-capitalize border rounded py-2">Working Area</h6>
                             <img src="assets/img/details1.png" class="img-fluid w-100" alt="">
                           </div>
                           <div class="col-md-12 col-lg-5 col-5">
                             <p class="mt-7">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
-                            <a href="" class="btn btn-rounded btn-sm btn-primary">Read More</a>
+                            <a href="" class="btn btn-rounded btn-sm btn-danger">Read More</a>
                           </div>
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-6 col-12">
+                    <div class="col-md-6 col-12 mb-2">
                       <div class="content-box p-2">
                         <div class="row">
                           <div class="col-md-12 col-lg-7 col-7">
-                            <h6 class="text-center text-capitalize">Working Area</h6>
+                            <h6 class="text-center text-capitalize border rounded py-2">Working Area</h6>
                             <img src="assets/img/details1.png" class="img-fluid w-100" alt="">
                           </div>
                           <div class="col-md-12 col-lg-5 col-5">
                             <p class="mt-7">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
-                            <a href="" class="btn btn-rounded btn-sm btn-primary">Read More</a>
+                            <a href="" class="btn btn-rounded btn-sm btn-danger">Read More</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-12 mb-2">
+                      <div class="content-box p-2">
+                        <div class="row">
+                          <div class="col-md-12 col-lg-7 col-7">
+                            <h6 class="text-center text-capitalize border rounded py-2">Working Area</h6>
+                            <img src="assets/img/details1.png" class="img-fluid w-100" alt="">
+                          </div>
+                          <div class="col-md-12 col-lg-5 col-5">
+                            <p class="mt-7">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
+                            <a href="" class="btn btn-rounded btn-sm btn-danger">Read More</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-12 mb-2">
+                      <div class="content-box p-2">
+                        <div class="row">
+                          <div class="col-md-12 col-lg-7 col-7">
+                            <h6 class="text-center text-capitalize border rounded py-2">Working Area</h6>
+                            <img src="assets/img/details1.png" class="img-fluid w-100" alt="">
+                          </div>
+                          <div class="col-md-12 col-lg-5 col-5">
+                            <p class="mt-7">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
+                            <a href="" class="btn btn-rounded btn-sm btn-danger">Read More</a>
                           </div>
                         </div>
                       </div>
@@ -256,19 +285,26 @@
             <div class="col-md-2 col-12 home-main-leftbar">
               <div class="mb-4">
                   <ul>
-                      <li class="ps-1 py-1">Gramaus at a Glance</li>
-                      <li class="py-1"><a href="">Gramaus at a Glance</a></li>
-                      <li class="py-1"><a href="">Gramaus at a Glance</a></li>
+                      <li class="ps-1 py-1">স্বাধীনতার সুবর্ণ জয়ন্তী</li>
+                      <img src="assets/img/BD_golden_jubilee.png" class="img-fluid" alt="">
                   </ul>
               </div>
 
               <div class="mb-4">
                   <ul>
-                      <li class="ps-1 py-1">Gramaus at a Glance</li>
-                      <li class="py-1"><a href="">Gramaus at a Glance</a></li>
-                      <li class="py-1"><a href="">Gramaus at a Glance</a></li>
+                      <li class="ps-1 py-1">Speach of Chairmen</li>
+                      <img src="assets/img/Hamid_Sir.jpg" class="img-fluid" alt="">
+                      <p>According to the statistics a large portion of ultra poor population over Asia live in Bangladesh. The rural poverty and the discrimination between the rich and the poor have been increasing Keeping pace with the increasing rate of population.</p>
+                      <a href="">Read More <i class="fas fa-arrow-right"></i></a>
                   </ul>
               </div>
+
+              <div class="mb-4">
+                <ul>
+                    <li class="ps-1 py-1">Latest News / Notices</li>
+                    <li><a href="">গ্রামাউস এ নিয়োগ</a></li>
+                </ul>
+            </div>
           </div>
         </div>
     </section>
@@ -276,12 +312,11 @@
 
 
     <!-- Start Footer Section -->
-    <footer class="">
+    <footer>
         <div class="container pt-4 pb-2">
           <div class="row">
             <div class="col-md-5 col-6">
-                <h5 class="mb-4 text-decoration-underline">Contact Information</h5>
-
+                <h5 class="mb-4">Contact Information</h5>
                 <p>Padakhep Manabik Unnayan Kendra<br>Head Office</p>
 
                 <p>
@@ -296,8 +331,8 @@
                 </p>
             </div>
 
-            <div class="col-md-3 col-6">
-              <h5 class="mb-4 text-decoration-underline">More Links</h5>
+            <div class="col-md-3 col-6 morelinks">
+              <h5 class="mb-4">More Links</h5>
               <ul>
                 <li><a href="">Organogram</a></li>
                 <li><a href="">Organogram</a></li>
@@ -309,7 +344,7 @@
           </div>
 
           <div class="col-md-4 col-12">
-            <h5 class="mb-4 text-decoration-underline">Facebook Page</h5>
+            <h5 class="mb-4">Facebook Page</h5>
             <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FKrishokerHashii%2F&tabs=timeline&height=150&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="100%" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
           </div>
         </div>
@@ -329,5 +364,7 @@
 
     <!-- Bootstrap Bundle JS -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS -->
+    <script src="assets/js/custom.js"></script>
 </body>
 </html>
