career, branch, donors, gallery page design

--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
                   <div class="collapse navbar-collapse home-nav-list" id="navbarSupportedContent">
                     <ul class="navbar-nav text-uppercase mx-auto mb-2 mb-lg-0 d-flex">
                       <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light active" aria-current="page" href="#"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
+                        <a class="nav-link text-light active" aria-current="page" href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
                       </li>
                       <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="#"><i class="fa fa-briefcase" aria-hidden="true"></i> career</a>
+                        <a class="nav-link text-light" href="careers.html"><i class="fa fa-briefcase" aria-hidden="true"></i> career</a>
                       </li>
                       <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="#"><i class="fa fa-thumbtack" aria-hidden="true"></i> branches</a>
+                        <a class="nav-link text-light" href="branches.html"><i class="fa fa-thumbtack" aria-hidden="true"></i> branches</a>
                       </li>
                       <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="#"><i class="fa fa-assistive-listening-systems" aria-hidden="true"></i> donor</a>
+                        <a class="nav-link text-light" href="donors.html"><i class="fa fa-assistive-listening-systems" aria-hidden="true"></i> donor</a>
                       </li>
                       <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="#"><i class="fa fa-address-book" aria-hidden="true"></i> gallery</a>
+                        <a class="nav-link text-light" href="gallaries.html"><i class="fa fa-address-book" aria-hidden="true"></i> gallery</a>
                       </li>
                       <li class="nav-item bg-danger me-1 px-3">
                         <a class="nav-link text-light" href="#"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> contact us</a>
