add gallery view in gallery page

--- a/gallaries.html
+++ b/gallaries.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!-- Lightbox -->
+    <link type="text/css" rel="stylesheet" href="assets/css/lightbox.min.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -118,22 +120,34 @@
 
                 <div class="row gallery">
                     <div class="col-md-4 col-6 mb-3">
+                      <a href="assets/img/IMG20210830104953.jpg" data-lightbox="mygallery">
                         <img src="assets/img/IMG20210830104953.jpg" class="img-fluid w-100" alt="">
+                      </a>
                     </div>
                     <div class="col-md-4 col-6 mb-3">
+                      <a href="assets/img/IMG20210830104953.jpg" data-lightbox="mygallery">
                         <img src="assets/img/IMG20210830104953.jpg" class="img-fluid w-100" alt="">
+                      </a>
                     </div>
                     <div class="col-md-4 col-6 mb-3">
+                      <a href="assets/img/IMG20210830104953.jpg" data-lightbox="mygallery">
                         <img src="assets/img/IMG20210830104953.jpg" class="img-fluid w-100" alt="">
+                      </a>
                     </div>
                     <div class="col-md-4 col-6 mb-3">
+                      <a href="assets/img/IMG20210830104953.jpg" data-lightbox="mygallery">
                         <img src="assets/img/IMG20210830104953.jpg" class="img-fluid w-100" alt="">
+                      </a>
                     </div>
                     <div class="col-md-4 col-6 mb-3">
+                      <a href="assets/img/IMG20210830104953.jpg" data-lightbox="mygallery">
                         <img src="assets/img/IMG20210830104953.jpg" class="img-fluid w-100" alt="">
+                      </a>
                     </div>
                     <div class="col-md-4 col-6 mb-3">
+                      <a href="assets/img/IMG20210830104953.jpg" data-lightbox="mygallery">
                         <img src="assets/img/IMG20210830104953.jpg" class="img-fluid w-100" alt="">
+                      </a>
                     </div>
                 </div>
 
@@ -225,6 +239,7 @@
 
     <!-- Bootstrap Bundle JS -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/lightbox-plus-jquery.min.js"></script>
     <!-- Custom JS -->
     <script src="assets/js/custom.js"></script>
 </body>
