remove header slider from other page and add active page class

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <!-- Lightbox -->
-    <link type="text/css" rel="stylesheet" href="assets/css/lightbox.min.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -38,11 +36,11 @@
                       <li class="nav-item bg-danger me-1 px-3">
                         <a class="nav-link text-light" href="donors.html"><i class="fa fa-assistive-listening-systems" aria-hidden="true"></i> donor</a>
                       </li>
-                      <li class="nav-item bg-danger me-1 px-3 active">
+                      <li class="nav-item bg-danger me-1 px-3">
                         <a class="nav-link text-light" href="gallaries.html"><i class="fa fa-address-book" aria-hidden="true"></i> gallery</a>
                       </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="contact.html"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> contact us</a>
+                      <li class="nav-item bg-danger me-1 px-3 active">
+                        <a class="nav-link text-light"  href="contact.html"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> contact us</a>
                       </li>
                     </ul>
                   </div>
@@ -77,43 +75,52 @@
 
             <!-- Main Section Content -->
             <div class="col-md-8 col-12">
-                <div class="branches py-2 my-4">
-                    <h3 class="text-center mb-4">Gallery</h3>
+
+                <div class="py-4">
+                    <h4>Make Your Career With Us</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore possimus, neque, dolorum aliquid modi quisquam vitae dolore sequi labore rem laudantium numquam distinctio doloribus, et ad. Dolore doloribus aspernatur tempore?</p>
                 </div>
 
-                <div class="row gallery">
-                    <div class="col-md-4 col-6 mb-3">
-                      <a href="assets/img/IMG20210830104953.jpg" data-lightbox="mygallery">
-                        <img src="assets/img/IMG20210830104953.jpg" class="img-fluid w-100" alt="">
-                      </a>
-                    </div>
-                    <div class="col-md-4 col-6 mb-3">
-                      <a href="assets/img/IMG20210830104953.jpg" data-lightbox="mygallery">
-                        <img src="assets/img/IMG20210830104953.jpg" class="img-fluid w-100" alt="">
-                      </a>
-                    </div>
-                    <div class="col-md-4 col-6 mb-3">
-                      <a href="assets/img/IMG20210830104953.jpg" data-lightbox="mygallery">
-                        <img src="assets/img/IMG20210830104953.jpg" class="img-fluid w-100" alt="">
-                      </a>
-                    </div>
-                    <div class="col-md-4 col-6 mb-3">
-                      <a href="assets/img/IMG20210830104953.jpg" data-lightbox="mygallery">
-                        <img src="assets/img/IMG20210830104953.jpg" class="img-fluid w-100" alt="">
-                      </a>
-                    </div>
-                    <div class="col-md-4 col-6 mb-3">
-                      <a href="assets/img/IMG20210830104953.jpg" data-lightbox="mygallery">
-                        <img src="assets/img/IMG20210830104953.jpg" class="img-fluid w-100" alt="">
-                      </a>
-                    </div>
-                    <div class="col-md-4 col-6 mb-3">
-                      <a href="assets/img/IMG20210830104953.jpg" data-lightbox="mygallery">
-                        <img src="assets/img/IMG20210830104953.jpg" class="img-fluid w-100" alt="">
-                      </a>
-                    </div>
-                </div>
+                <div class="career-positions mb-3">
+                    <h4 class="mb-4 py-2 border bg-purple text-white ps-2">Latest Positions</h4>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                            <a href="career-details.html">
+                                <h6>Senior Software Engineer</h6>
+                                <p>Backend Developer</p>
+                            </a>
+                        </li>
 
+                        <li class="list-group-item">
+                            <a href="career-details.html">
+                                <h6>Senior Software Engineer</h6>
+                                <p>Backend Developer</p>
+                            </a>
+                        </li>
+
+                        <li class="list-group-item">
+                            <a href="career-details.html">
+                                <h6>Senior Software Engineer</h6>
+                                <p>Backend Developer</p>
+                            </a>
+                        </li>
+
+                        <li class="list-group-item">
+                            <a href="career-details.html">
+                                <h6>Senior Software Engineer</h6>
+                                <p>Backend Developer</p>
+                            </a>
+                        </li>
+
+                        <li class="list-group-item">
+                            <a href="career-details.html">
+                                <h6>Senior Software Engineer</h6>
+                                <p>Backend Developer</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                
             </div>
 
 
@@ -202,7 +209,6 @@
 
     <!-- Bootstrap Bundle JS -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/lightbox-plus-jquery.min.js"></script>
     <!-- Custom JS -->
     <script src="assets/js/custom.js"></script>
 </body>
