--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                   </button>
                   <div class="collapse navbar-collapse home-nav-list" id="navbarSupportedContent">
                     <ul class="navbar-nav text-uppercase mx-auto mb-2 mb-lg-0 d-flex">
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light active" aria-current="page" href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
+                      <li class="nav-item bg-danger me-1 px-3 active">
+                        <a class="nav-link text-light" href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
                       </li>
                       <li class="nav-item bg-danger me-1 px-3">
                         <a class="nav-link text-light" href="careers.html"><i class="fa fa-briefcase" aria-hidden="true"></i> career</a>
@@ -77,7 +77,7 @@
                         <a class="nav-link text-light" href="gallaries.html"><i class="fa fa-address-book" aria-hidden="true"></i> gallery</a>
                       </li>
                       <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="#"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> contact us</a>
+                        <a class="nav-link text-light" href="contact.html"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> contact us</a>
                       </li>
                     </ul>
                   </div>
