--- a/careers.html
+++ b/careers.html
@@ -17,43 +17,6 @@
     <!-- Header Section Start -->
     <header>
         <div class="container">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item home-header-carousel active">
-                    <img src="assets/img/header_slider1.jpeg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h1>
-                          <span class="bg-warning">
-                            Livelihood Development for Tribal
-                          </span>
-                        </h1>
-                    </div>
-                  </div>
-                  <div class="carousel-item home-header-carousel">
-                    <img src="assets/img/home_slider2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1>
-                            <span class="bg-warning">
-                                Employment and Income Generating Program(EIGP)
-                            </span>
-                          </h1>
-                    </div>
-                  </div>
-                  <div class="carousel-item home-header-carousel">
-                    <img src="assets/img/header_slider1.jpeg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1>
-                            <span class="bg-warning">
-                                Gramaus Model Academy
-                            </span>
-                          </h1>
-                    </div>
-                  </div>
-                </div>
-              </div>
-        </div>
-
-        <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light main-manu" id="navbar">
                 <div class="container-fluid">
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,8 +27,8 @@
                       <li class="nav-item bg-danger me-1 px-3">
                         <a class="nav-link text-light" href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
                       </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light active" aria-current="page" href="careers.html"><i class="fa fa-briefcase" aria-hidden="true"></i> career</a>
+                      <li class="nav-item bg-danger me-1 px-3 active">
+                        <a class="nav-link text-light" href="careers.html"><i class="fa fa-briefcase" aria-hidden="true"></i> career</a>
                       </li>
                       <li class="nav-item bg-danger me-1 px-3">
                         <a class="nav-link text-light" href="branches.html"><i class="fa fa-thumbtack" aria-hidden="true"></i> branches</a>
@@ -77,7 +40,7 @@
                         <a class="nav-link text-light" href="gallaries.html"><i class="fa fa-address-book" aria-hidden="true"></i> gallery</a>
                       </li>
                       <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="#"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> contact us</a>
+                        <a class="nav-link text-light" href="contact.html"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> contact us</a>
                       </li>
                     </ul>
                   </div>
