blog page design

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                           </div>
                           <div class="col-md-12 col-lg-5 col-5">
                             <p class="mt-7">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
-                            <a href="" class="btn btn-rounded btn-sm btn-danger">Read More</a>
+                            <a href="blog.html" class="btn btn-rounded btn-sm btn-danger">Read More</a>
                           </div>
                         </div>
                       </div>
@@ -223,7 +223,7 @@
                           </div>
                           <div class="col-md-12 col-lg-5 col-5">
                             <p class="mt-7">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
-                            <a href="" class="btn btn-rounded btn-sm btn-danger">Read More</a>
+                            <a href="blog.html" class="btn btn-rounded btn-sm btn-danger">Read More</a>
                           </div>
                         </div>
                       </div>
@@ -237,7 +237,7 @@
                           </div>
                           <div class="col-md-12 col-lg-5 col-5">
                             <p class="mt-7">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
-                            <a href="" class="btn btn-rounded btn-sm btn-danger">Read More</a>
+                            <a href="blog.html" class="btn btn-rounded btn-sm btn-danger">Read More</a>
                           </div>
                         </div>
                       </div>
@@ -251,7 +251,7 @@
                           </div>
                           <div class="col-md-12 col-lg-5 col-5">
                             <p class="mt-7">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
-                            <a href="" class="btn btn-rounded btn-sm btn-danger">Read More</a>
+                            <a href="blog.html" class="btn btn-rounded btn-sm btn-danger">Read More</a>
                           </div>
                         </div>
                       </div>
