navbar mobile view issue fix, two pages added

--- a/gallaries.html
+++ b/gallaries.html
@@ -129,13 +129,20 @@
               </div>
 
               <div class="mb-4">
-                  <ul>
-                      <li class="ps-1 py-1">Speach of Chairmen</li>
-                      <img src="assets/img/Hamid_Sir.jpg" class="img-fluid" alt="">
-                      <p>According to the statistics a large portion of ultra poor population over Asia live in Bangladesh. The rural poverty and the discrimination between the rich and the poor have been increasing Keeping pace with the increasing rate of population.</p>
-                      <a href="">Read More <i class="fas fa-arrow-right"></i></a>
-                  </ul>
-              </div>
+                <ul>
+                    <li class="ps-1 py-1">Speach of Chairmen</li>
+                    <img src="assets/img/chairman.jpg" class="img-fluid w-100" alt="">
+                    <p>From 1971 Bangladesh is facing many challenges including social, environment and economical aspect . It's education, health, live hood women empowerment and socio-economic sector is steel vulnerable. Polliprottasha continues...</p>
+                    <a href="chairman-speech.html">Read More <i class="fas fa-arrow-right"></i></a>
+                </ul>
+
+                <ul>
+                  <li class="ps-1 py-1">Executive Director</li>
+                  <img src="assets/img/director.jpg" class="img-fluid w-100" alt="">
+                  <p>Sheikh Faruque ahammad has been working in development field over fifteen years tenures . He gained an ample experience in diverse development paradigms; like Microfinance (MF) management, result based program management (RBM)...</p>
+                  <a href="executive-director.html">Read More <i class="fas fa-arrow-right"></i></a>
+              </ul>
+            </div>
 
               <div class="mb-4">
                 <ul>
